Fixed an issue where the real name is overflown in header advertiser page

--- a/packages/p2p/src/components/advertiser-page/advertiser-page.scss
+++ b/packages/p2p/src/components/advertiser-page/advertiser-page.scss
@@ -82,6 +82,8 @@
             display: flex;
 
             @include mobile {
+                display: inline-grid;
+                grid-template-columns: auto auto;
                 margin: 0 0 1rem;
 
                 .dp2p-avatar {
